fix-wrap-img

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -39,6 +39,7 @@
 .list-item-img {
   border-radius: 5px;
   display: block;
+  width: 100%;
   height: 100%;
   max-height: 400px;
   object-fit: cover;
